modified the search api call from POST to GET using search queries and now it can perform multiple queries - Also had to change the database host

--- a/backend/db/.env
+++ b/backend/db/.env
@@ -1,5 +1,5 @@
-USER=rd55m7yS9u
-DATABASE=rd55m7yS9u
+USER=sql6505936
+DATABASE=sql6505936
 DB_PORT=3306
-PASSWORD=PFYAMddWsi
-HOST=remotemysql.com
+PASSWORD=VzXI21QZhp
+HOST=sql6.freemysqlhosting.net
