database connection configs were changed - routed back to remotemysql

--- a/backend/db/.env
+++ b/backend/db/.env
@@ -1,5 +1,5 @@
-USER=sql6505936
-DATABASE=sql6505936
+USER=rd55m7yS9u
+DATABASE=rd55m7yS9u
 DB_PORT=3306
-PASSWORD=VzXI21QZhp
-HOST=sql6.freemysqlhosting.net
+PASSWORD=E0mqurQH07
+HOST=remotemysql.com
