--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "heroku-postbuild": "cd frontend && npm install --only=dev && npm install && npm run build"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.3"
+    "@reduxjs/toolkit": "^1.8.3",
+    "bootstrap": "^5.2.0",
+    "font-awesome": "^4.7.0"
   }
 }
